# rewardlens-fraud-decision-lab

./: .gitignore  CHANGELOG.md  README.md  business_recommendation.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
anomaly_detection/: __init__.py  scoring.py
architecture/: architecture.md
artifacts/: pipeline_manifest.json
artifacts/anomaly/: feature_separation.csv  model_metrics.json  policy_sensitivity.csv  scored_users.parquet  source_daily_health.parquet  threshold_evaluation.csv
artifacts/experiment/: country_effects.csv  experiment_summary.json  experiment_user_outcomes.parquet  recommendation.md
dashboard/: __init__.py  app.py  charts.py
data_generator/: SCHEMA.md  __init__.py  generate.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/: schema.yml
dbt_project/models/marts/: mart_evaluation_truth.sql  mart_population_baselines.sql  mart_source_daily_health.sql  mart_user_features.sql  mart_user_population_comparison.sql
dbt_project/models/staging/: sources.yml  stg_ad_events.sql  stg_devices.sql  stg_experiment_assignments.sql  stg_installs.sql  (+4 more)
dbt_project/tests/: assert_nonnegative_feature_rates.sql  assert_reward_after_ad.sql  assert_session_time_order.sql  assert_source_health_grain.sql  assert_source_health_rates.sql
docs/: LEARNING_GUIDE.md
experiment_analysis/: __init__.py  analyze.py
orchestration/: __init__.py  pipeline.py
sql/: __init__.py  load_raw.py
tests/: test_anomaly_detection.py  test_dashboard.py  test_dashboard_charts.py  test_data_generator.py  test_experiment_analysis.py
