[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewardlens"
version = "1.1.0"
description = "Synthetic post-install reward integrity decision lab"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2,<2",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pyarrow>=15,<20",
  "scikit-learn>=1.5,<2",
  "scipy>=1.13,<2",
]

[project.optional-dependencies]
dev = [
  "dbt-duckdb>=1.9,<2",
  "plotly>=5.24,<7",
  "prefect>=3.1,<4",
  "pytest>=8,<9",
  "streamlit>=1.41,<2",
]

[project.scripts]
rewardlens-generate = "data_generator.generate:main"

[tool.setuptools.packages.find]
include = [
  "anomaly_detection*",
  "dashboard*",
  "data_generator*",
  "experiment_analysis*",
  "orchestration*",
  "sql*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
